--- a/HogwartsHouses/Views/Base.lproj/Main.storyboard
+++ b/HogwartsHouses/Views/Base.lproj/Main.storyboard
@@ -1,24 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7bp-PV-FUC">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Table View Controller-->
+        <scene sceneID="fbv-RV-Q11">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableViewController id="zyz-fk-R33" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="JF5-DK-L11">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="guessCell" rowHeight="81" id="Qzq-8t-Y2d">
+                                <rect key="frame" x="0.0" y="28" width="414" height="81"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Qzq-8t-Y2d" id="0Au-6d-ZXo">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="81"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QQ9-tQ-QVP">
+                                            <rect key="frame" x="336" y="12" width="57" height="57"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="QQ9-tQ-QVP" secondAttribute="height" multiplier="1:1" id="Zpm-9m-ZID"/>
+                                            </constraints>
+                                            <state key="normal" title="Button" image="hogwarts"/>
+                                        </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SSv-q4-8D6">
+                                            <rect key="frame" x="32" y="30" width="292" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="QQ9-tQ-QVP" firstAttribute="top" secondItem="0Au-6d-ZXo" secondAttribute="topMargin" constant="1" id="58a-nJ-Bjn"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="QQ9-tQ-QVP" secondAttribute="trailing" constant="1" id="Ccp-i2-u3c"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="QQ9-tQ-QVP" secondAttribute="bottom" constant="1" id="Ffr-qz-CjP"/>
+                                        <constraint firstItem="SSv-q4-8D6" firstAttribute="leading" secondItem="0Au-6d-ZXo" secondAttribute="leadingMargin" constant="12" id="ZBd-HS-HAa"/>
+                                        <constraint firstItem="SSv-q4-8D6" firstAttribute="centerY" secondItem="0Au-6d-ZXo" secondAttribute="centerY" id="y3m-dt-j1v"/>
+                                        <constraint firstItem="QQ9-tQ-QVP" firstAttribute="leading" secondItem="SSv-q4-8D6" secondAttribute="trailing" constant="12" id="yV2-GF-jtp"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="zyz-fk-R33" id="5LC-9i-8Ue"/>
+                            <outlet property="delegate" destination="zyz-fk-R33" id="47g-Fi-11K"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="FoO-WZ-SvS">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="axG-2H-lPm"/>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4es-IM-TDq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="556.52173913043487" y="113.83928571428571"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="8jK-N3-m4f">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="7bp-PV-FUC" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gFg-cx-Etn">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="zyz-fk-R33" kind="relationship" relationship="rootViewController" id="b6p-r4-tAv"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I1o-Ic-I3f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-126.08695652173914" y="113.83928571428571"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="hogwarts" width="224" height="224"/>
+    </resources>
 </document>
