adds CRUD and persistence

--- a/HogwartsHouses/Views/Base.lproj/Main.storyboard
+++ b/HogwartsHouses/Views/Base.lproj/Main.storyboard
@@ -6,10 +6,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Main Table View Controller-->
         <scene sceneID="fbv-RV-Q11">
             <objects>
-                <tableViewController id="zyz-fk-R33" sceneMemberID="viewController">
+                <tableViewController id="zyz-fk-R33" customClass="MainTableViewController" customModule="HogwartsHouses" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="JF5-DK-L11">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -53,7 +53,11 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="FoO-WZ-SvS">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="axG-2H-lPm"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="axG-2H-lPm">
+                            <connections>
+                                <action selector="addGuessButtonTapped:" destination="zyz-fk-R33" id="R5q-DB-FUD"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4es-IM-TDq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
